--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
@@ -7,6 +7,13 @@
 <body>
   Hello, world!
 
-  <a href="/logout">LOGOUT</a>
+  <!--при включенной проверке на атаку csrf logout можно делать только через POST-->
+<!--  <a href="/logout">LOGOUT</a>-->
+  <form th:method="POST" th:action="@{/logout}">
+    <!--csrf нужно только для login! Для всех остальных форм thymeleaf подставит автоматом. Магия-->
+    <!--здесь можно без csrf поля делать запрос-->
+    <input type="submit" value="LOGOUT">
+  </form>
+
 </body>
 </html>
